--- a/homework06/style.css
+++ b/homework06/style.css
@@ -312,4 +312,28 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    gap: 20px;
+}
+
+.text_row a {
+    color: var(--2, #212353);
+    font-family: Avenir;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 160%;
+    letter-spacing: 0.08px;
+    text-align: center;
+
+}
+
+.link {
+    display: flex;
+    text-align: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.rows_img {
+    align-self: center;
 }
