--- a/homework06/style.css
+++ b/homework06/style.css
@@ -255,6 +255,10 @@ body {
     line-height: 160%;
 }
 
+.features {
+    margin-bottom: 176px;
+}
+
 .features h2 {
     color: #212353;
     text-align: center;
@@ -336,4 +340,84 @@ body {
 
 .rows_img {
     align-self: center;
+}
+
+.testimonials {
+    border-radius: 50px;
+    background: var(--3, #9C69E2);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 109px 76px 60px 93px;
+    gap: 60px;
+}
+
+.testimonials h3 {
+    color: #FFF;
+    font-family: Helvetica;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 130%;
+    margin-bottom: 28px;
+}
+
+.fang {
+    border-radius: 20px;
+    background: #FFF;
+    box-shadow: 0px 20px 0px 0px rgba(156, 105, 226, 0.30);
+    width: 949px;
+    padding: 60px 102px 60px;
+    display: flex;
+    gap: 44px;
+    padding-bottom: 60px;
+
+}
+
+.text_testimols h4 {
+    color: var(--2, #212353);
+    font-family: Avenir;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 160%;
+    letter-spacing: 0.09px;
+    padding-top: 10px;
+}
+
+.text_testimols a {
+    color: var(--3, #9C69E2);
+    font-family: Avenir;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 160%;
+    letter-spacing: 0.14px;
+
+}
+
+.text_testimols p {
+    color: var(--1, #4B5D68);
+    font-family: Avenir;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 180%;
+    width: 550px;
+    padding-top: 19px;
+}
+
+.fang img {
+    width: 132.419px;
+    height: 90px;
+    border-radius: 132.419px;
+}
+
+.controls {
+    display: flex;
+    justify-content: space-between;
+}
+
+.arrow_control {
+    align-self: end;
 }
