--- a/homework07/style.css
+++ b/homework07/style.css
@@ -62,6 +62,7 @@ body {
     grid-area: header;
     padding: 15px;
     align-items: center;
+    background: url("../homework07/img/pictures/hero.png"), lightgray 50% / cover no-repeat;
 }
 
 .header_container {
@@ -105,6 +106,20 @@ body {
 
 .nav li:last-child {
     margin-right: 0;
+}
+
+.hero {
+    margin-top: 103px;
+    margin-bottom: 118px;
+}
+
+.hero h1 {
+    color: #FFF;
+    font-family: Playfair Display;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 67px;
 }
 
 
