--- a/homework07/style.css
+++ b/homework07/style.css
@@ -46,7 +46,7 @@ body {
 .wrapper {
     display: grid;
     min-height: 100vh;
-    grid-template: minmax(100px, auto) 1fr minmax(70px, auto) / 1fr;
+    grid-template: minmax(50px, auto) 1fr minmax(70px, auto) / 1fr;
     grid-template-areas:
         "header"
         "main"
@@ -60,9 +60,8 @@ body {
 
 .header {
     grid-area: header;
-    padding: 15px;
+    padding-top: 15px;
     align-items: center;
-    background: url("../homework07/img/pictures/hero.png"), lightgray 50% / cover no-repeat;
 }
 
 .header_container {
@@ -109,8 +108,10 @@ body {
 }
 
 .hero {
-    margin-top: 103px;
-    margin-bottom: 118px;
+    padding-top: 103px;
+    padding-bottom: 118px;
+    width: 100%;
+    background: url("../homework07/img/pictures/hero.png"), lightgray 50% / cover no-repeat;
 }
 
 .hero h1 {
